WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201863
TextIterator should convert tabs to spaces
https://bugs.webkit.org/show_bug.cgi?id=201863
Summary
TextIterator should convert tabs to spaces
Antti Koivisto
Reported
2019-09-17 00:55:07 PDT
As seen in imported/w3c/web-platform-tests/innerText/getter.html imported/w3c/web-platform-tests/html/dom/elements/the-innertext-idl-attribute/getter.html
Attachments
patch
(7.28 KB, patch)
2019-09-17 00:56 PDT
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews213 for win-future
(13.83 MB, application/zip)
2019-09-17 02:52 PDT
,
EWS Watchlist
no flags
Details
patch
(10.54 KB, patch)
2019-09-17 05:00 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(12.23 KB, patch)
2019-09-17 05:14 PDT
,
Antti Koivisto
zalan
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch
(12.22 KB, patch)
2019-09-17 10:05 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-09-17 00:56:44 PDT
Created
attachment 378946
[details]
patch
EWS Watchlist
Comment 2
2019-09-17 02:52:36 PDT
Comment on
attachment 378946
[details]
patch
Attachment 378946
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13039446
New failing tests: imported/blink/fast/text/font-linux-normalize.html fast/tokenizer/script_extra_close.html editing/style/non-inheritable-styles.html
EWS Watchlist
Comment 3
2019-09-17 02:52:38 PDT
Created
attachment 378954
[details]
Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Antti Koivisto
Comment 4
2019-09-17 05:00:50 PDT
Created
attachment 378958
[details]
patch
Antti Koivisto
Comment 5
2019-09-17 05:14:49 PDT
Created
attachment 378959
[details]
patch
WebKit Commit Bot
Comment 6
2019-09-17 08:07:48 PDT
Comment on
attachment 378959
[details]
patch Rejecting
attachment 378959
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 378959, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Traceback (most recent call last): File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch", line 84, in <module> main() File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch", line 79, in main WebKitPatch(os.path.abspath(__file__)).main() File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/multicommandtool.py", line 305, in main result = command.check_arguments_and_execute(options, args, self) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/multicommandtool.py", line 123, in check_arguments_and_execute return self.execute(options, args, tool) or 0 File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/abstractsequencedcommand.py", line 55, in execute self._sequence.run_and_handle_errors(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
https://webkit-queues.webkit.org/results/13039995
Antti Koivisto
Comment 7
2019-09-17 10:05:56 PDT
Created
attachment 378972
[details]
patch
WebKit Commit Bot
Comment 8
2019-09-17 10:31:27 PDT
Comment on
attachment 378972
[details]
patch Clearing flags on attachment: 378972 Committed
r249963
: <
https://trac.webkit.org/changeset/249963
>
WebKit Commit Bot
Comment 9
2019-09-17 10:31:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2019-09-17 10:32:24 PDT
<
rdar://problem/55444205
>
Truitt Savell
Comment 11
2019-09-17 14:00:44 PDT
It looks like the changes in
https://trac.webkit.org/changeset/249963/webkit
broke media/track/track-cue-rendering-rtl.html It looks like this test no longer has some tabs and instead has spaces. could this be a rebasline? History:
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Ftrack%2Ftrack-cue-rendering-rtl.html
Diff: --- /Volumes/Data/worker/iOS-12-Simulator-WK2-Tests-EWS/build/layout-test-results/media/track/track-cue-rendering-rtl-expected.txt +++ /Volumes/Data/worker/iOS-12-Simulator-WK2-Tests-EWS/build/layout-test-results/media/track/track-cue-rendering-rtl-actual.txt @@ -21,8 +21,8 @@ ** Jump to next cue ** EXPECTED (video.currentTime == '0.75') OK EXPECTED (testTrack.track.activeCues.length == '1') OK -EXPECTED (testTrack.track.activeCues[0].text == ' 1234') OK -EXPECTED (testCueDisplayBox.innerText == ' 1234') OK +EXPECTED (testTrack.track.activeCues[0].text == ' 1234') OK +EXPECTED (testCueDisplayBox.innerText == ' 1234') OK ** The position should be default and CSS direction set to ltr ** EXPECTED (2 * testCueDisplayBox.offsetLeft == video.videoWidth - testCueDisplayBox.offsetWidth == 'true') OK @@ -73,8 +73,8 @@ ** Jump to next cue ** EXPECTED (video.currentTime == '2.75') OK EXPECTED (testTrack.track.activeCues.length == '1') OK -EXPECTED (testTrack.track.activeCues[0].text == ' ०१२३४५६à¥à¥®à¥¯ ') OK -EXPECTED (testCueDisplayBox.innerText == ' ०१२३४५६à¥à¥®à¥¯ ') OK +EXPECTED (testTrack.track.activeCues[0].text == ' ०१२३४५६à¥à¥®à¥¯ ') OK +EXPECTED (testCueDisplayBox.innerText == ' ०१२३४५६à¥à¥®à¥¯ ') OK ** The position should be default and CSS direction set to ltr ** EXPECTED (2 * testCueDisplayBox.offsetLeft == video.videoWidth - testCueDisplayBox.offsetWidth == 'true') OK
Ryan Haddad
Comment 12
2019-09-17 20:59:47 PDT
(In reply to Truitt Savell from
comment #11
)
> It looks like the changes in
https://trac.webkit.org/changeset/249963/webkit
> > broke media/track/track-cue-rendering-rtl.html > > It looks like this test no longer has some tabs and instead has spaces. > could this be a rebasline?
I went ahead and rebaselined the test in
https://trac.webkit.org/changeset/250022/webkit
Antti Koivisto
Comment 13
2019-09-18 10:33:56 PDT
Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug