TextIterator should convert tabs to spaces https://bugs.webkit.org/show_bug.cgi?id=201863

Reviewed by Zalan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/html/dom/elements/the-innertext-idl-attribute/getter-expected.txt:
* web-platform-tests/innerText/getter-expected.txt:

Source/WebCore:

As seen in tests

imported/w3c/web-platform-tests/innerText/getter.html
imported/w3c/web-platform-tests/html/dom/elements/the-innertext-idl-attribute/getter.html

The old simple line layout path in TextIterator used to do this.

* editing/TextIterator.cpp:
(WebCore::TextIterator::handleTextBox):

LayoutTests:

* editing/pasteboard/5761530-1.html:

Set body to 'whitespace:pre' so tabs don't get lost in test output.

* fast/tokenizer/script_extra_close-expected.txt:
* imported/blink/fast/text/font-linux-normalize-expected.txt:
* platform/mac/editing/pasteboard/5761530-1-expected.txt: Removed.

No need for platform specific result.

* editing/pasteboard/5761530-1-expected.txt:


Canonical link: https://commits.webkit.org/215514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249963 268f45cc-cd09-0410-ab3c-d52691b4dbfc